--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -34,7 +34,7 @@
         </button>
         <br>
     </form>
-
+    <span style="font-weight: bold;">{{DataFromPreviousBatch}}</span>
     <mat-table #table [dataSource]="dataSource" matSort>
 
         <ng-container matColumnDef="ClassFeeId">
