--- a/src/app/modules/student/studentfamilynfriend/studentfamilynfriend.component.scss
+++ b/src/app/modules/student/studentfamilynfriend/studentfamilynfriend.component.scss
@@ -2,18 +2,28 @@ mat-form-field{
     margin-right: 15px;
     width: 98%;
 }
-
+.mat-column-FeeType,
+.mat-column-FeeTypeRemarks,
 .mat-column-Name
 {
     flex:1 1 120px;
 }
 .mat-column-ContactNo,
-.mat-column-RelationshipId{
+.mat-column-Action
+{
     flex:1 1 100px;
 }
-.mat-column-Remarks{
+.mat-column-SiblingId
+{
+    flex: 1 1 200px;
+}
+
+.mat-column-RelationshipId,
+.mat-column-Remarks
+{
     flex: 1 1 150px;
 }
-.mat-column-StudentFamilyNFriendId{
-    flex: 1 1 80px;
+.mat-column-StudentFamilyNFriendId,.mat-column-Active{
+    justify-content: center;
+    flex: 1 1 70px;
 }
