--- a/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.scss
+++ b/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.scss
@@ -20,7 +20,7 @@ mat-radio-button{
     display: grid;
     place-items: center;
     margin-bottom: 10px;
-    width: 72%;
+    //width: 72%;
     
 }
 .innerspan{
