--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -93,9 +93,9 @@
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="RollNo">
-        <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>RollNo
+        <mat-header-cell *matHeaderCellDef mat-sort-header>RollNo
         </mat-header-cell>
-        <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
+        <mat-cell *matCellDef="let element">
             <mat-form-field>
                 <input matInput (blur)="onBlur(element)" [value]="element.RollNo" [(ngModel)]="element.RollNo"
                     autocomplete="Off" [maxlength]="10">
@@ -129,9 +129,9 @@
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Remarks">
-        <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>Remarks
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Remarks
         </mat-header-cell>
-        <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
+        <mat-cell *matCellDef="let element">
             <mat-form-field>
                 <input matInput (blur)="onBlur(element)" [value]="element.Remarks" [(ngModel)]="element.Remarks"
                     autocomplete="Off" [maxlength]="250">
