--- a/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
+++ b/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
@@ -13,16 +13,18 @@ button{
 mat-cell,mat-header-cell{
     border-right: 1px solid lightgray;
     min-width: 100px;
-    flex:1;    
+    //flex:1;    
     justify-content: center;
     align-self: stretch;
 }
 .mat-column-Student{
     justify-content: flex-start;
-    flex:1 0 150px;
+    flex:1 1 150px;
 }
 .mat-column-Action{
-    justify-content: center;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
     flex:1 1 150px;
 }
 
