--- a/src/app/modules/misc/no-of-student/no-of-student.component.html
+++ b/src/app/modules/misc/no-of-student/no-of-student.component.html
@@ -3,8 +3,9 @@
 </div>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <!-- <alert></alert> -->
-<form style="display: flex;flex-direction: row;justify-content: space-around;" [formGroup]="searchForm">
-    <div>
+<div style="display: flex;flex-direction: row;">
+    <form [formGroup]="searchForm">
+
         <mat-form-field appearance="outline">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
@@ -16,19 +17,19 @@
         <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentClasses()">
             <mat-icon>search</mat-icon>
         </button>
-    </div>
-</form>
+    </form>
+</div>
 <div style="font-size: medium;">{{ HeaderTitle }}</div>
 <mat-table #table style="overflow: auto;" [dataSource]="dataSource" matSort>
     <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-        <mat-header-cell *matHeaderCellDef mat-sort-header="">{{disCol!='Action'?disCol:''}}            
+        <mat-header-cell *matHeaderCellDef mat-sort-header="">{{disCol!='Action'?disCol:''}}
         </mat-header-cell>
-        <mat-cell *matCellDef="let element">            
+        <mat-cell *matCellDef="let element">
             {{element[disCol]}}
         </mat-cell>
         <mat-footer-cell *matFooterCellDef>
             <span *ngIf="disCol=='Total'">
-               Total: {{TotalStudent}}
+                Total: {{TotalStudent}}
             </span>
         </mat-footer-cell>
     </ng-container>
