--- a/src/app/modules/schoolreports/today-collection/today-collection.component.html
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.html
@@ -111,6 +111,10 @@
                 <div style="width:100%;">{{item.PaymentType}}</div>
                 <div style="width:100%;display: flex;justify-content: end;">&#x20b9; {{item.TotalAmount}}</div>
             </div>
+            <div style="padding: 15px 15px 0px 20px; min-width:450px;display: flex;flex-direction: row;justify-content: center;align-items: center;">
+                <div style="width:100%;">Cancelled Amount :</div>
+                <div style="width:100%;display: flex;justify-content: end;">&#x20b9; {{CancelledAmount}}</div>
+            </div>
         </div>
     </div>
     <mat-divider style="width: 100%;"></mat-divider>
