--- a/src/app/modules/student/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/student/addstudentclass/addstudentclass.component.html
@@ -1,93 +1,94 @@
-<div style="padding:15px 15px 10px 15px;"><strong>Class</strong></div>
-    <!-- <alert></alert> -->
-    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-
-    <form [formGroup]="studentclassForm">
-        <mat-grid-list style="max-width: 600px;" [cols]="2" rowHeight="80px" (window:resize)="onResize($event)">
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-                <mat-form-field appearance="outline">
-                    <mat-label>Class</mat-label>
-                    <mat-select formControlName="ClassId" #ClassId>
-                        <mat-option value="0">---</mat-option>
-                        <mat-option *ngFor="let p of Classes" [value]="p.ClassId">
-                            {{p.ClassName}}
-                        </mat-option>
-                    </mat-select>
-                    <span class="text-danger" *ngIf="f.ClassId.touched && f.ClassId.hasError('required')">Class is
-                        required.</span>
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-                <mat-form-field appearance="outline">
-                    <mat-label>Roll No.</mat-label>
-                    <input formControlName="RollNo" autocomplete="Off" #RollNo matInput [maxlength]="50">
-                    <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
-                    <span class="text-danger" *ngIf="f.RollNo.touched && f.RollNo.hasError('required')">
-                        Roll No. is required.</span>
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-                <mat-form-field appearance="outline">
-                    <mat-label>Section</mat-label>
-                    <mat-select formControlName="SectionId" #SectionId>
-                        <mat-option value="0">---</mat-option>
-                        <mat-option *ngFor="let p of Sections" [value]="p.MasterDataId">
-                            {{p.MasterDataName}}
-                        </mat-option>
-                    </mat-select>
-                    <span class="text-danger" *ngIf="f.SectionId.touched && f.SectionId.hasError('required')">Section is
-                        required.</span>
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-                <mat-form-field appearance="outline">
-                    <mat-label>Fee type</mat-label>
-                    <mat-select formControlName="FeeTypeId">
-                        <mat-option value="0">---</mat-option>
-                        <mat-option *ngFor="let p of FeeType" [value]="p.FeeTypeId">
-                            {{p.FeeTypeName}}
-                        </mat-option>
-                    </mat-select>
-                    <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Fee type is
-                        required.</span>
-                </mat-form-field>
-            </mat-grid-tile>           
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-                <mat-form-field appearance="outline">
-                    <mat-label>Admission Date</mat-label>
-                    <input formControlName="AdmissionDate" matInput [matDatepicker]="picker" autocomplete="off">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-                <mat-form-field appearance="outline">
-                    <mat-label>House</mat-label>
-                    <mat-select formControlName="HouseId">
-                        <mat-option value="0">---</mat-option>
-                        <mat-option *ngFor="let p of Houses" [value]="p.MasterDataId">
-                            {{p.MasterDataName}}
-                        </mat-option>
-                    </mat-select>
-                    <!-- <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Fee type is
+<div style="padding:15px 15px 10px 0px;"><strong>Class</strong></div>
+<!-- <alert></alert> -->
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<span style="font-size: smaller;margin: 20px;">If fee type is updated, please run 'create invoice' in class-fee
+    page.</span>
+<form [formGroup]="studentclassForm">
+    <mat-grid-list style="max-width: 600px;" [cols]="2" rowHeight="80px" (window:resize)="onResize($event)">
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field appearance="outline">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="ClassId" #ClassId>
+                    <mat-option value="0">---</mat-option>
+                    <mat-option *ngFor="let p of Classes" [value]="p.ClassId">
+                        {{p.ClassName}}
+                    </mat-option>
+                </mat-select>
+                <span class="text-danger" *ngIf="f.ClassId.touched && f.ClassId.hasError('required')">Class is
+                    required.</span>
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field appearance="outline">
+                <mat-label>Roll No.</mat-label>
+                <input formControlName="RollNo" autocomplete="Off" #RollNo matInput [maxlength]="50">
+                <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                <span class="text-danger" *ngIf="f.RollNo.touched && f.RollNo.hasError('required')">
+                    Roll No. is required.</span>
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field appearance="outline">
+                <mat-label>Section</mat-label>
+                <mat-select formControlName="SectionId" #SectionId>
+                    <mat-option value="0">---</mat-option>
+                    <mat-option *ngFor="let p of Sections" [value]="p.MasterDataId">
+                        {{p.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+                <span class="text-danger" *ngIf="f.SectionId.touched && f.SectionId.hasError('required')">Section is
+                    required.</span>
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field appearance="outline">
+                <mat-label>Fee type</mat-label>
+                <mat-select formControlName="FeeTypeId">
+                    <mat-option value="0">---</mat-option>
+                    <mat-option *ngFor="let p of FeeType" [value]="p.FeeTypeId">
+                        {{p.FeeTypeName}}
+                    </mat-option>
+                </mat-select>
+                <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Fee type is
+                    required.</span>
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field appearance="outline">
+                <mat-label>Admission Date</mat-label>
+                <input formControlName="AdmissionDate" matInput [matDatepicker]="picker" autocomplete="off">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field appearance="outline">
+                <mat-label>House</mat-label>
+                <mat-select formControlName="HouseId">
+                    <mat-option value="0">---</mat-option>
+                    <mat-option *ngFor="let p of Houses" [value]="p.MasterDataId">
+                        {{p.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+                <!-- <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Fee type is
                         required.</span> -->
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-                <mat-form-field appearance="outline">
-                    <mat-label>Remarks</mat-label>
-                    <input formControlName="Remarks" autocomplete="Off" #Remarks matInput [maxlength]="250">
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1"  >
-                <mat-checkbox formControlName="Active">
-                </mat-checkbox>&nbsp; Active
-            </mat-grid-tile>
-        </mat-grid-list>
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-form-field appearance="outline">
+                <mat-label>Remarks</mat-label>
+                <input formControlName="Remarks" autocomplete="Off" #Remarks matInput [maxlength]="250">
+            </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+            <mat-checkbox formControlName="Active">
+            </mat-checkbox>&nbsp; Active
+        </mat-grid-tile>
+    </mat-grid-list>
 
-    </form>
+</form>
 <!-- </div> -->
-<mat-card-actions fxLayout="row" fxLayoutAlign="center center">    
+<mat-card-actions fxLayout="row" fxLayoutAlign="center center">
     <button [disabled]="loading" class="mat-raised-button" (click)="back()">
         <mat-icon>arrow_back</mat-icon>
     </button>
