--- a/src/app/modules/student/addstudentclass/addstudentclass.component.scss
+++ b/src/app/modules/student/addstudentclass/addstudentclass.component.scss
@@ -7,7 +7,10 @@ mat-form-field {
 button {
   margin-right: 15px;
 }
-
+// .mat-grid-title-content{
+//   padding-left: 0px;
+//   margin-left: 0px;
+// }
 ::ng-deep .mat-figure {
   justify-content: left !important;
 }
