--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -46,7 +46,7 @@
             </button>
         </form>
         <br>
-        <!-- <div class="example-container mat-elevation-z8"> -->
+        <div style="max-width: 1200px;">
             <mat-table #table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
@@ -74,6 +74,18 @@
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.ClassName}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="FeeType">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Fee Type </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element.FeeType}}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="Remarks">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Remarks </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        {{element.Remarks}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="FatherName">
@@ -109,7 +121,7 @@
                 </mat-row>
             </mat-table>
             <mat-paginator [pageSizeOptions]="[10,25,50]"></mat-paginator>
-        <!-- </div> -->
+        </div>
     </mat-card-content>
     <!-- <mat-card-actions fxLayoutAlign="center center">
         <button [disabled]="loading" (click)="exportArray()" matTooltip="export to excel" class="mat-raised-button">
