--- a/src/app/modules/student/searchstudent/searchstudent.component.scss
+++ b/src/app/modules/student/searchstudent/searchstudent.component.scss
@@ -38,20 +38,14 @@ mat-header-cell{
     text-align: center;
     
 }
-.mat-column-StudentId{
-    flex : none;
-    width: 60px;
-   
-    
+.mat-column-Active,.mat-column-StudentId{
+    flex:1 1 80px;
 }
-.mat-column-Active{
-    flex : none;
-    width: 60px;
-   
-    
-}
-.mat-column-Action{
+.mat-column-Action,.mat-column-ClassName,.mat-column-Name,
+.mat-column-Remarks,.mat-column-FeeType,
+.mat-column-FatherName,.mat-column-MotherName,.mat-column-ReasonForLeaving{
     justify-content: center;
+    flex: 1 1 120px;
 }
 table{
     min-width: 300px;
