--- a/src/app/modules/student/studentboard/studentboard.component.html
+++ b/src/app/modules/student/studentboard/studentboard.component.html
@@ -1,9 +1,16 @@
-
 <mat-card>
     <mat-card-title style="margin:20px">Student</mat-card-title>
-    <mat-card-subtitle style="margin:20px" style="font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;">{{StudentName}}</mat-card-subtitle>
+    <mat-card-subtitle style="margin:20px"
+        style="align-items: center; font-weight: bold; background-color:lightgray;padding:15px;margin: 0px 20px 0px 20px;display: flex;justify-content: space-between;">
+        <span>{{StudentName}}</span>
+        <span><button (click)="back()" matTooltip="back" class="mat-raised-button">
+                <mat-icon>arrow_back</mat-icon>
+            </button>
+        </span>
+    </mat-card-subtitle>
     <mat-card-content style="margin:20px">
-        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex"
+            (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
                     <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
