--- a/src/app/modules/misc/calendar/calendar.component.html
+++ b/src/app/modules/misc/calendar/calendar.component.html
@@ -1,20 +1,18 @@
-<div class="row text-center">
-    <div class="col-md-4">
-      <div class="btn-group">
+<div style="display:flex;justify-content:space-between">
+    <div style="margin: 15px;display:flex;justify-content:space-between">
+      <!-- <div class="btn-group"> -->
         <div
           class="btn btn-primary"
           mwlCalendarPreviousView
           [view]="view"
           [(viewDate)]="viewDate"
-          (viewDateChange)="closeOpenMonthViewDay()"
-        >
+          (viewDateChange)="closeOpenMonthViewDay()">
           Previous
         </div>
         <div
           class="btn btn-outline-secondary"
           mwlCalendarToday
-          [(viewDate)]="viewDate"
-        >
+          [(viewDate)]="viewDate">
           Today
         </div>
         <div
@@ -22,36 +20,32 @@
           mwlCalendarNextView
           [view]="view"
           [(viewDate)]="viewDate"
-          (viewDateChange)="closeOpenMonthViewDay()"
-        >
+          (viewDateChange)="closeOpenMonthViewDay()">
           Next
         </div>
-      </div>
+      <!-- </div> -->
     </div>
-    <div class="col-md-4">
+    <div style="margin: 15px;">
       <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
     </div>
-    <div class="col-md-4">
+    <div style="margin: 15px;">
       <div class="btn-group">
         <div
           class="btn btn-primary"
           (click)="setView(CalendarView.Month)"
-          [class.active]="view === CalendarView.Month"
-        >
+          [class.active]="view === CalendarView.Month">
           Month
         </div>
         <div
           class="btn btn-primary"
           (click)="setView(CalendarView.Week)"
-          [class.active]="view === CalendarView.Week"
-        >
+          [class.active]="view === CalendarView.Week">
           Week
         </div>
         <div
           class="btn btn-primary"
           (click)="setView(CalendarView.Day)"
-          [class.active]="view === CalendarView.Day"
-        >
+          [class.active]="view === CalendarView.Day">
           Day
         </div>
       </div>
