--- a/src/app/modules/globaladmininitial/organizationpayment/organizationpayment.component.html
+++ b/src/app/modules/globaladmininitial/organizationpayment/organizationpayment.component.html
@@ -58,7 +58,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input (blur)="onBlur(element)" type="number"
+                            <input type="number"
                             [(ngModel)]="element.PaidMonths" [value]="element.PaidMonths" matInput
                                 autocomplete="off" [max]="72">                          
                         </mat-form-field>
@@ -84,14 +84,14 @@
                         </mat-form-field>                        
                     </mat-cell>
                 </ng-container>                
-                <ng-container matColumnDef="Active">
+                <!-- <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef style="justify-content: center;"> Active </mat-header-cell>
                     <mat-cell *matCellDef="let element" style="justify-content: center;">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                        <mat-checkbox (click)="$event.stopPropagation()"
                             [checked]="element.Active==1?true:false">
                         </mat-checkbox>
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef>
                         <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="AddNew()">
